payment confirm part1
