# api/controllers/customer/entities/dto/customer.dto.ts
@@ -3,7 +3,10 @@ import { z } from "zod";
 export const updateCustomerSchema = z.object({
   firstName: z.string().max(20).optional(),
   lastName: z.string().max(20).optional(),
-  phone: z.string().regex(/^\+[0-9]{1,3}\s*[0-9]{1,15}$/).optional(),
+  phone: z
+    .string()
+    .regex(/^\+[0-9]{1,3}\s*[0-9]{1,15}$/)
+    .optional(),
   avatarUrl: z.string().url().optional(),
   birthdate: z.string().optional(),
   shippingAddress: z
@@ -12,7 +15,10 @@ export const updateCustomerSchema = z.object({
       firstName: z.string().max(20).optional(),
       lastName: z.string().max(20).optional(),
       email: z.string().email().optional(),
-      phone: z.string().regex(/^\+[0-9]{1,3}\s*[0-9]{1,15}$/).optional(),
+      phone: z
+        .string()
+        .regex(/^\+[0-9]{1,3}\s*[0-9]{1,15}$/)
+        .optional(),
       streetNumber: z.string().max(10).optional(),
       address1: z.string().max(100).optional(),
       address2: z.string().max(100).optional(),
@@ -27,7 +33,10 @@ export const updateCustomerSchema = z.object({
       firstName: z.string().max(20).optional(),
       lastName: z.string().max(20).optional(),
       email: z.string().email().optional(),
-      phone: z.string().regex(/^\+[0-9]{1,3}\s*[0-9]{1,15}$/).optional(),
+      phone: z
+        .string()
+        .regex(/^\+[0-9]{1,3}\s*[0-9]{1,15}$/)
+        .optional(),
       streetNumber: z.string().max(10).optional(),
       address1: z.string().max(100).optional(),
       address2: z.string().max(100).optional(),
@@ -36,18 +45,22 @@ export const updateCustomerSchema = z.object({
       country: z.string().max(50).optional(),
     })
     .optional(),
-  cartProducts: z.array(
-    z.object({
-      productId: z.string(),
-      quantity: z.number().min(1),
-    })
-  ).optional(),
-  cartGiftcards: z.array(
-    z.object({
-      amount: z.number().min(0),
-      quantity: z.number().min(1),
-    })
-  ).optional(),
+  cartProducts: z
+    .array(
+      z.object({
+        productId: z.string(),
+        quantity: z.number().min(1),
+      })
+    )
+    .optional(),
+  cartGiftcards: z
+    .array(
+      z.object({
+        amount: z.number().min(0),
+        quantity: z.number().min(1),
+      })
+    )
+    .optional(),
   wishlistProducts: z.array(z.string()).optional(),
   emailMarketingConsent: z.boolean().optional(),
   isActive: z.boolean().optional(),
@@ -61,10 +74,19 @@ const objectIdSchema = z
 
 // Schéma Zod pour CashbackType
 export const cashbackSchema = z.object({
-  cashbackEarned: z.number().min(0, "Cashback earned must be a positive number"),
+  cashbackEarned: z
+    .number()
+    .min(0, "Cashback earned must be a positive number"),
   cashbackSpent: z.number().min(0, "Cashback spent must be a positive number"),
-  label: z.enum(["loyalty", "birthday", "order", "other", "review", "referral"]),
-  orderId: objectIdSchema.optional(),
+  label: z.enum([
+    "loyalty",
+    "birthday",
+    "order",
+    "other",
+    "review",
+    "referral",
+  ]),
+  orderNumber: z.string().optional(),
   reviewId: objectIdSchema.optional(),
 });
 
